--- a/index.html
+++ b/index.html
@@ -101,18 +101,26 @@
 
 
       <!-- Grid for photos -->
-      <div class="w3-container" style="margin-top: 50px; margin-bottom: 150px;">
+      <div class="w3-container" style="margin-top: 50px; margin-bottom: 150px; width: 1250px;">
         <h2 class="w3-xlarge w3-text-black" style="text-align: left;">PDF Reader</h2>
         <hr style="width:300px; border-color: gray;" class="opacity">
-        <img src="img/pdfreader.gif" style="float: left; width:80%">
-        <img src="img/pdfreader.gif" style="float: right; width:20%">
+        <img src="img/pdfreader.gif" style="float: left; width:60%">
+        <p class="w3-large w3-text-black" style="float: right; width:40%; font-size: large;"> Support Undo,Redo, Paging, Draw, Marker, Erase. </p>
       </div>
 
-      <div class="w3-container" style="margin-top: 100px; margin-bottom: 100px;">
-        <h2 class="w3-xlarge w3-text-black" style="text-align: left;">3D maze</h2>
+      <div class="w3-container" style="margin-top: 100px; margin-bottom: 100px; width: 1250px;">
+        <h2 class="w3-xlarge w3-text-black" style="text-align: left;">3D maze (OpenGL)</h2>
         <hr style="width:300px; border-color: gray;" class="opacity">
-        <img src="img/3dmaze.gif" style="float: left; width:80%">
-        <img src="img/pdfreader.gif" style="float: right; width:20%">
+        <img src="img/3dmaze.gif" style="float: left; width:60%">
+        <p class="w3-large w3-text-black" style="float: right; width:40%; font-size: large;">Random generated maze with seeds.<br> A implementation of Sphere and Cube.</p>
+      </div>
+
+      <div class="w3-container" style="margin-top: 100px; margin-bottom: 100px; width: 1250px;">
+        <h2 class="w3-xlarge w3-text-black" style="text-align: left;">SpaceInvaders</h2>
+        <hr style="width:300px; border-color: gray;" class="opacity">
+        <img src="img/SpaceInvaders1.png" style="float: left; width:60%">
+        <p class="w3-large w3-text-black" style="float: right; width:40%; font-size: large;"> Support Undo,Redo, Paging, Draw, Marker, Erase. </p>
+        <img src="img/SpaceInvaders1.gif" style="float: left; width:60%">
       </div>
 
 
