add timely project, reforamt UI.
Signed-off-by: fzj <z63feng@uwaterloo.ca>

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <!-- Content. Add your bio here. -->
     <div class="w3-margin">
       <p class="w3-xlarge w3-text-black w3-animate-opacity" style="font-family: 'Syne', sans-serif; margin-left: 5%;"><strong>WELCOME TO MY CHANNEL!</strong></p>
-      <p class="w3-xlarge w3-text-black w3-animate-opacity" style="font-family: 'Syne', sans-serif; margin-left: 5%;"><strong>This is Alfred Feng.</strong></p>
+      <p class="w3-xlarge w3-text-black w3-animate-opacity" style="font-family: 'Syne', sans-serif; margin-left: 5%;"><strong>This is Zijian Feng.</strong></p>
       <p class="w3-large w3-tag w3-text-white w3-animate-fading" style="font-family: 'Syne', sans-serif; margin-left: 5%; margin-bottom: 20%;">Developer and Traveller.</p>
     </div>
 
@@ -104,34 +104,43 @@
       <div class="w3-container" style="margin-top: 50px; margin-bottom: 150px; width: 1150px;">
         <h2 class="w3-xlarge w3-text-black" style="text-align: left;">PDF Reader (Java)</h2>
         <hr style="width:300px; border-color: gray;" class="opacity">
-        <img src="img/pdfreader.gif" style="float: left; width:60%">
-        <p class="w3-large w3-text-black" style="float: right; width:40%; font-size: large;"> Support Undo,Redo, Paging, Draw, Marker, Erase. </p>
+        <img src="img/pdfreader.gif" style="float: left; width:80%">
+        <p class="w3-large" style="text-align: left; float: left; width:80%; font-size: large; box-shadow: 0 4px 8px rgba(0,0,0,0.2);"> Designed and implemented a feature-rich PDF reader supporting undo/redo operations, custom annotations, drawing, highlighting, and erasing. Employed an MVC design pattern to separate UI from logic, enabling modularity and maintainability. Integrated a dynamic page rendering system and optimized event handling for smooth user interactions across large documents. </p>
       </div>
 
       <div class="w3-container" style="margin-top: 100px; margin-bottom: 100px; width: 1150px;">
         <h2 class="w3-xlarge w3-text-black" style="text-align: left;">3D maze (OpenGL)</h2>
         <hr style="width:300px; border-color: gray;" class="opacity">
-        <img src="img/3dmaze.gif" style="float: left; width:60%">
-        <p class="w3-large w3-text-black" style="float: right; width:40%; font-size: large;">Random generated maze with seeds.<br> A implementation of Sphere and Cube.</p>
+        <img src="img/3dmaze.gif" style="float: left; width:80%">
+        <p class="w3-large w3-text-black" style="float: left; width:80%; font-size: large; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">Random generated maze with seeds.<br> A implementation of Sphere and Cube.</p>
       </div>
 
       <div class="w3-container" style="margin-top: 100px; margin-bottom: 100px; width: 1150px;">
         <h2 class="w3-xlarge w3-text-black" style="text-align: left;">SpaceInvaders (Kotlin)</h2>
         <hr style="width:300px; border-color: gray;" class="opacity">
-        <img src="img/SpaceInvaders1.png" style="float: left; width:60%">
-        <p class="w3-large w3-text-black" style="float: right; width:40%; font-size: large;"> Space Invaders Retro 1978: Shooting arcade game, developed with JavaFX in Kotlin. </p>
-        <img src="img/SpaceInvaders1.gif" style="float: left; width:60%">
+        <img src="img/SpaceInvaders1.png" style="float: left; width:80%">
+        <p class="w3-large w3-text-black" style="float: left; width:80%; font-size: large; box-shadow: 0 4px 8px rgba(0,0,0,0.2);"> Space Invaders Retro 1978: Shooting arcade game, developed with JavaFX in Kotlin. </p>
+        <img src="img/SpaceInvaders1.gif" style="float: left; width:80%">
       </div>
 
       <div class="w3-container" style="margin-top: 100px; margin-bottom: 100px; width: 1150px;">
         <h2 class="w3-xlarge w3-text-black" style="text-align: left;">Ray Tracing Renderer (C++)</h2>
         <hr style="width:300px; border-color: gray;" class="opacity">
-        <iframe src="upload/A5Objectives.pdf#toolbar=0" width="60%" height="1000px">
+        <iframe src="upload/A5Objectives.pdf#toolbar=0" width="100%" height="1000px">
         </iframe>
-        <p class="w3-large w3-text-black" style="float: right; width:40%; font-size: large;">CS488 Project<br> Honorable Mentioned in School Website.
+        <p class="w3-large w3-text-black" style="float: left; width:80%; font-size: large; ">CS488 Project<br> Honorable Mentioned in School Website.
           <img src="img/honor_mention.png" style="float: left; width:100%">
         </p>
         
+      </div>
+
+      <div class="w3-container" style="margin-top: 100px; margin-bottom: 100px; width: 1150px;">
+        <h2 class="w3-xlarge w3-text-black" style="text-align: left;">Timely (Android)</h2>
+        <hr style="width:300px; border-color: gray;" class="opacity">
+        <img src="upload/timely-1.jpg" style="float: left; width:100%">
+        <p class="w3-large w3-text-black" style="float: left; width:100%; font-size: large; text-align: left; box-shadow: 0 4px 8px rgba(0,0,0,0.2);"> A native Android application to simplify the process of planning and scheduling meetups or events among small groups of people. It offers a range of convenient features, including creating, modifying and responding to events with ease, as well as detailed information on time and location and useful polling tools. <br>
+        The deployment package contains: <br> a cloud server apk file, <br> a client apk file, <br> a common sdk. </p>
+        <img src="upload/timely-1.jpg" style="float: left; width:100%">
       </div>
 
 
@@ -159,11 +168,11 @@
       <!-- Add links to your social networks here. -->
       <div class="w3-container w3-xlarge w3-padding w3-margin">
         <!-- <i class="fa fa-facebook-official w3-hover-opacity"></i> -->
-        <a class="fa fa-instagram w3-hover-opacity" href="https://www.instagram.com/fzjalfred/" target="_blank" style="text-decoration:none;"></a>
+        <!-- <a class="fa fa-instagram w3-hover-opacity" href="https://www.instagram.com/fzjalfred/" target="_blank" style="text-decoration:none;"></a> -->
         <!-- <i class="fa fa-snapchat w3-hover-opacity"></i> -->
         <!-- <i class="fa fa-pinterest-p w3-hover-opacity"></i> -->
         <!-- <i class="fa fa-twitter w3-hover-opacity"></i> -->
-        <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/fzjalfred/" target="_blank" style="text-decoration:none;"></a>
+        <!-- <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/fzjalfred/" target="_blank" style="text-decoration:none;"></a> -->
       </div>
 
       <!-- Footer. This section contains an ad for W3Schools Spaces. You can leave it to support us. -->
@@ -184,7 +193,15 @@
     <hr style="width:200px" class="w3-opacity">
 
     <div class="w3-section">
-      <p style="color: black; font-size: large;"><i class="fa fa-map-marker fa-fw w3-text-black w3-xxlarge w3-margin-right"></i> Toronto, Canada</p>
+      <div class="w3-container w3-xxxlarge w3-text-black w3-padding w3-margin-right">
+        <!-- <i class="fa fa-facebook-official w3-hover-opacity"></i> -->
+        <a class="fa fa-instagram w3-hover-opacity" href="https://www.instagram.com/fzjalfred/" target="_blank" style="text-decoration:none;"></i> </a>
+        <!-- <i class="fa fa-snapchat w3-hover-opacity"></i> -->
+        <!-- <i class="fa fa-pinterest-p w3-hover-opacity"></i> -->
+        <!-- <i class="fa fa-twitter w3-hover-opacity"></i> -->
+        <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/fzjalfred/" target="_blank" style="text-decoration:none;"></i></a>
+      </div>
+      <p style="color: black; font-size: large;"><i class="fa fa-map-marker fa-fw w3-text-black w3-xxlarge w3-margin-right"></i> BC, Canada</p>
       <p style="color: black; font-size: large;"><i class="fa fa-phone fa-fw w3-text-black w3-xxlarge w3-margin-right"></i> Phone: (+1)4168938496</p>
       <p style="color: black; font-size: large;"><i class="fa fa-envelope fa-fw w3-text-black w3-xxlarge w3-margin-right"> </i> Email: fzjalfred@gmail.com <br> &emsp; &emsp; &emsp; &emsp; &emsp; z63feng@uwaterloo.ca</p>
     </div><br>
